Changed docker base image for GPU support from TF to Nvidia (smaller size)

--- a/docker/Dockerfile_gpu
+++ b/docker/Dockerfile_gpu
@@ -1,4 +1,4 @@
-FROM tensorflow/tensorflow:latest-gpu
+FROM nvidia/cuda:11.2.2-cudnn8-runtime-ubuntu20.04
 RUN mkdir /workspace
 WORKDIR /workspace/
 ARG DEBIAN_FRONTEND=noninteractive
